{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 71,
  "lineage": "5480b489-51fe-8bc7-dbb5-4c59665a9e21",
  "resources": [
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389079568269:security-group/sg-06c375366afdc6126",
            "description": "Security group which is to allow SSH from Bastion",
            "filter": null,
            "id": "sg-06c375366afdc6126",
            "name": "ssh-sg-20200106074147464500000006",
            "tags": {
              "Name": "ssh-sg"
            },
            "vpc_id": "vpc-0498e2682bd4bbf55"
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389079568269:security-group/sg-0d3736c38882ecf6d",
            "description": "EKS node security groups",
            "filter": null,
            "id": "sg-0d3736c38882ecf6d",
            "name": "cluster-sg-20200106074147467400000008",
            "tags": {
              "Name": "cluster-sg"
            },
            "vpc_id": "vpc-0498e2682bd4bbf55"
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_security_group",
      "name": "node",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389079568269:security-group/sg-0ea8b09599b200293",
            "description": "EKS node security groups",
            "filter": null,
            "id": "sg-0ea8b09599b200293",
            "name": "node-sg-20200106074147465000000007",
            "tags": {
              "Name": "node-sg",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "vpc_id": "vpc-0498e2682bd4bbf55"
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_vpc",
      "name": "eks",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389079568269:vpc/vpc-0498e2682bd4bbf55",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0cd09c4cb0358de30",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-39925343",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0498e2682bd4bbf55",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00d819797f46a3507",
            "owner_id": "389079568269",
            "state": "available",
            "tags": {
              "Name": "eks-cluster-vpc",
              "kubernetes.io/cluster/eks-cluster": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-09acfba1d24583ece",
            "public_dns": "ec2-18-215-89-219.compute-1.amazonaws.com",
            "public_ip": "18.215.89.219",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-cluster-vpc",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-042f9705ce270963b",
            "public_dns": "ec2-52-45-197-161.compute-1.amazonaws.com",
            "public_ip": "52.45.197.161",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-cluster-vpc",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02cf98ebda95c343e",
            "public_dns": "ec2-34-197-239-102.compute-1.amazonaws.com",
            "public_ip": "34.197.239.102",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-cluster-vpc",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f62740885fe613c4",
            "owner_id": "389079568269",
            "tags": {
              "Name": "eks-cluster-vpc",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-0498e2682bd4bbf55"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09acfba1d24583ece",
            "id": "nat-051a00017522102c9",
            "network_interface_id": "eni-0f879b914f7072f76",
            "private_ip": "10.0.132.83",
            "public_ip": "18.215.89.219",
            "subnet_id": "subnet-04eb9b55f0c6ebf90",
            "tags": {
              "Name": "eks-cluster-vpc",
              "kubernetes.io/cluster/eks-cluster": "shared"
            }
          },
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-042f9705ce270963b",
            "id": "nat-05f5cd6b587512a39",
            "network_interface_id": "eni-0cd3fda2fc0e75bb4",
            "private_ip": "10.0.146.33",
            "public_ip": "52.45.197.161",
            "subnet_id": "subnet-00c1ec00dd30be463",
            "tags": {
              "Name": "eks-cluster-vpc",
              "kubernetes.io/cluster/eks-cluster": "shared"
            }
          },
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cf98ebda95c343e",
            "id": "nat-01b2696b39e814e0c",
            "network_interface_id": "eni-0f90b4d43632b1684",
            "private_ip": "10.0.170.171",
            "public_ip": "34.197.239.102",
            "subnet_id": "subnet-0ba757d2683c193a9",
            "tags": {
              "Name": "eks-cluster-vpc",
              "kubernetes.io/cluster/eks-cluster": "shared"
            }
          },
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07e1b2ef6f79fb9921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-051a00017522102c9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07e1b2ef6f79fb992",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_nat_gateway.this",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c91895ea991c54591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-05f5cd6b587512a39",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c91895ea991c5459",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_nat_gateway.this",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ffb6e4f612065d131080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-01b2696b39e814e0c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ffb6e4f612065d13",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_nat_gateway.this",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f62740885fe613c4",
            "id": "r-rtb-0db4fc20e6134dbac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0db4fc20e6134dbac",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07e1b2ef6f79fb992",
            "owner_id": "389079568269",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-cluster-vpc",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-0498e2682bd4bbf55"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c91895ea991c5459",
            "owner_id": "389079568269",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-cluster-vpc",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-0498e2682bd4bbf55"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ffb6e4f612065d13",
            "owner_id": "389079568269",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-cluster-vpc",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-0498e2682bd4bbf55"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0db4fc20e6134dbac",
            "owner_id": "389079568269",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-cluster-vpc",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-0498e2682bd4bbf55"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c664373328c468c",
            "route_table_id": "rtb-07e1b2ef6f79fb992",
            "subnet_id": "subnet-0bfd0f6c65a7e945e"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.database",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.database",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cfbf42ba7462d97",
            "route_table_id": "rtb-0c91895ea991c5459",
            "subnet_id": "subnet-02d7b16ea47e3e773"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.database",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.database",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d198b1e6ce97f54",
            "route_table_id": "rtb-0ffb6e4f612065d13",
            "subnet_id": "subnet-02648e6715627a402"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.database",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.database",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b95c0498a7b0682",
            "route_table_id": "rtb-07e1b2ef6f79fb992",
            "subnet_id": "subnet-096376f29295ebffa"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7c0cdb3e277e748",
            "route_table_id": "rtb-0c91895ea991c5459",
            "subnet_id": "subnet-01d87423868b6f11f"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0501dba25efa95198",
            "route_table_id": "rtb-0ffb6e4f612065d13",
            "subnet_id": "subnet-00a0bada117dbf470"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a9cda12ae161af8",
            "route_table_id": "rtb-0db4fc20e6134dbac",
            "subnet_id": "subnet-04eb9b55f0c6ebf90"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a148536903a40dfc",
            "route_table_id": "rtb-0db4fc20e6134dbac",
            "subnet_id": "subnet-00c1ec00dd30be463"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0970a663b7801d64a",
            "route_table_id": "rtb-0db4fc20e6134dbac",
            "subnet_id": "subnet-0ba757d2683c193a9"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389079568269:security-group/sg-06c375366afdc6126",
            "description": "Security group which is to allow SSH from Bastion",
            "egress": [],
            "id": "sg-06c375366afdc6126",
            "ingress": [],
            "name": "ssh-sg-20200106074147464500000006",
            "name_prefix": "ssh-sg-",
            "owner_id": "389079568269",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0498e2682bd4bbf55"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389079568269:security-group/sg-0d3736c38882ecf6d",
            "description": "EKS node security groups",
            "egress": [],
            "id": "sg-0d3736c38882ecf6d",
            "ingress": [],
            "name": "cluster-sg-20200106074147467400000008",
            "name_prefix": "cluster-sg-",
            "owner_id": "389079568269",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0498e2682bd4bbf55"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389079568269:security-group/sg-0ea8b09599b200293",
            "description": "EKS node security groups",
            "egress": [],
            "id": "sg-0ea8b09599b200293",
            "ingress": [],
            "name": "node-sg-20200106074147465000000007",
            "name_prefix": "node-sg-",
            "owner_id": "389079568269",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "node-sg",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0498e2682bd4bbf55"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2989309561",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3736c38882ecf6d",
            "self": false,
            "source_security_group_id": "sg-0ea8b09599b200293",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.cluster-sg.aws_security_group.this",
            "module.eks.module.cluster-sg.aws_security_group.this_name_prefix",
            "module.eks.module.node-sg.aws_security_group.this",
            "module.eks.module.node-sg.aws_security_group.this_name_prefix",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow EKS Control Plane",
            "from_port": 1025,
            "id": "sgrule-3718081757",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ea8b09599b200293",
            "self": false,
            "source_security_group_id": "sg-0d3736c38882ecf6d",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.cluster-sg.aws_security_group.this",
            "module.eks.module.cluster-sg.aws_security_group.this_name_prefix",
            "module.eks.module.node-sg.aws_security_group.this",
            "module.eks.module.node-sg.aws_security_group.this_name_prefix",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3499694208",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06c375366afdc6126",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.module.ssh_sg.aws_security_group.this",
            "module.eks.module.ssh_sg.aws_security_group.this_name_prefix",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-665337630",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d3736c38882ecf6d",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.module.cluster-sg.aws_security_group.this",
            "module.eks.module.cluster-sg.aws_security_group.this_name_prefix",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2877491437",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ea8b09599b200293",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.module.node-sg.aws_security_group.this",
            "module.eks.module.node-sg.aws_security_group.this_name_prefix",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "196.192.165.10/32"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-815272037",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06c375366afdc6126",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.ssh_sg.aws_security_group.this",
            "module.eks.module.ssh_sg.aws_security_group.this_name_prefix",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-4110687032",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ea8b09599b200293",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.node-sg.aws_security_group.this",
            "module.eks.module.node-sg.aws_security_group.this_name_prefix",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389079568269:subnet/subnet-0bfd0f6c65a7e945e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.192.0/21",
            "id": "subnet-0bfd0f6c65a7e945e",
            "map_public_ip_on_launch": false,
            "owner_id": "389079568269",
            "tags": {
              "Name": "eks-cluster-eks-db",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-0498e2682bd4bbf55"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389079568269:subnet/subnet-02d7b16ea47e3e773",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.200.0/21",
            "id": "subnet-02d7b16ea47e3e773",
            "map_public_ip_on_launch": false,
            "owner_id": "389079568269",
            "tags": {
              "Name": "eks-cluster-eks-db",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-0498e2682bd4bbf55"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389079568269:subnet/subnet-02648e6715627a402",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.208.0/21",
            "id": "subnet-02648e6715627a402",
            "map_public_ip_on_launch": false,
            "owner_id": "389079568269",
            "tags": {
              "Name": "eks-cluster-eks-db",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-0498e2682bd4bbf55"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389079568269:subnet/subnet-096376f29295ebffa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/19",
            "id": "subnet-096376f29295ebffa",
            "map_public_ip_on_launch": false,
            "owner_id": "389079568269",
            "tags": {
              "Name": "eks-cluster-eks-private",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0498e2682bd4bbf55"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389079568269:subnet/subnet-01d87423868b6f11f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-01d87423868b6f11f",
            "map_public_ip_on_launch": false,
            "owner_id": "389079568269",
            "tags": {
              "Name": "eks-cluster-eks-private",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0498e2682bd4bbf55"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389079568269:subnet/subnet-00a0bada117dbf470",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.0/19",
            "id": "subnet-00a0bada117dbf470",
            "map_public_ip_on_launch": false,
            "owner_id": "389079568269",
            "tags": {
              "Name": "eks-cluster-eks-private",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0498e2682bd4bbf55"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389079568269:subnet/subnet-04eb9b55f0c6ebf90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.128.0/20",
            "id": "subnet-04eb9b55f0c6ebf90",
            "map_public_ip_on_launch": true,
            "owner_id": "389079568269",
            "tags": {
              "Name": "eks-cluster-eks-public",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0498e2682bd4bbf55"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389079568269:subnet/subnet-00c1ec00dd30be463",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.144.0/20",
            "id": "subnet-00c1ec00dd30be463",
            "map_public_ip_on_launch": true,
            "owner_id": "389079568269",
            "tags": {
              "Name": "eks-cluster-eks-public",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0498e2682bd4bbf55"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389079568269:subnet/subnet-0ba757d2683c193a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.160.0/20",
            "id": "subnet-0ba757d2683c193a9",
            "map_public_ip_on_launch": true,
            "owner_id": "389079568269",
            "tags": {
              "Name": "eks-cluster-eks-public",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0498e2682bd4bbf55"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:389079568269:vpc/vpc-0498e2682bd4bbf55",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e38c864cca90581d",
            "default_route_table_id": "rtb-00d819797f46a3507",
            "default_security_group_id": "sg-0e02b71acbf0d4980",
            "dhcp_options_id": "dopt-39925343",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0498e2682bd4bbf55",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00d819797f46a3507",
            "owner_id": "389079568269",
            "tags": {
              "Name": "eks-cluster-vpc",
              "kubernetes.io/cluster/eks-cluster": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "module.eks.provider.aws"
    }
  ]
}